--- a/css/styles.css
+++ b/css/styles.css
@@ -152,10 +152,18 @@ body {
 .resume-section {
     background-color: #d9c2f3;
     padding-bottom: 50px;
+    background: rgba(95,69,123,1);
+    background: -moz-linear-gradient(top, rgba(95,69,123,1) 0%, rgba(240,235,245,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(95,69,123,1)), color-stop(100%, rgba(240,235,245,1)));
+    background: -webkit-linear-gradient(top, rgba(95,69,123,1) 0%, rgba(240,235,245,1) 100%);
+    background: -o-linear-gradient(top, rgba(95,69,123,1) 0%, rgba(240,235,245,1) 100%);
+    background: -ms-linear-gradient(top, rgba(95,69,123,1) 0%, rgba(240,235,245,1) 100%);
+    background: linear-gradient(to bottom, rgba(95,69,123,1) 0%, rgba(240,235,245,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f457b', endColorstr='#f0ebf5', GradientType=0 );
 }
 .resume-header {
     font-size: 49px;
-    font-weight:bold;
+    font-weight: bold;
     color: #fff;
     text-align: center;
     padding-top: 20px;
@@ -163,14 +171,30 @@ body {
     border-bottom: 5px solid #fff;
     margin-bottom: 25px;
     background-color: #5f457b;
+    position: relative;
+
+}
+.resume-expander {
+    padding-left: 10px;
+    padding-right: 10px; 
+    font-size: 50px;
+    position: absolute;
+    right: 0;
+    top: -4px;
+    cursor: pointer;
+}
+.resume-expander .word{
+    font-size: 25px;
+    position: relative;
+    top: -8px;
 }
 .resume-box {
+    display: none;
     background-color: #fff;
     max-width: 1300px;
     margin: 0 auto;
     padding: 15px;
-    margin-top: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     border: 2px solid #35989e;
     box-shadow: 0px 2px 10px 0px #79599c;
 }
@@ -182,10 +206,25 @@ body {
     margin: -15px -15px 10px -15px;
     padding: 10px 15px;
     background-color: #b4eff3;
+    max-width: 1300px;
+    margin: 0 auto;
+    border: 2px solid #35989e;
+    margin-bottom: 10px;
+    position: relative;
 }
 .experience-item-title {
     font-weight: bold;
     font-size: 19px;
+}
+.experience-more {
+    padding-top: 20px;
+}
+.experience-more-title {
+    font-weight: bold;
+}
+.experience-more a{
+    color: #000;
+    font-weight: bold;
 }
 .education-title {
     font-size: 19px;
@@ -238,6 +277,18 @@ body {
 .instagram:hover {
     background-color: #b4eff3;
     box-shadow: 0 3px 9px #24696d;
+}
+.instagram-feed {
+    max-width: 1300px;
+    margin: 0 auto;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #9e9e9e;
+    box-shadow: 0 3px 13px #288a90;
+    margin-top: 20px;
+}
+.lightwidget__image {
+    border: 1px solid #9e9e9e;
 }
 /*End Contact*/
 
